--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div>
             <label class="font-semibold">Mobile Number</label>
             <br>
-            <input type="text" placeholder="Enter Your Number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
+            <input type="text" placeholder="Enter Your Number" id="mobile-number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
         </div>
         <div class="mt-5">
             <label class="font-semibold">4-Digit Pin</label>
             <br>
-            <input type="text" placeholder="Enter 4 Digit Pin" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
+            <input type="text" placeholder="Enter 4 Digit Pin" id="pin-number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
         </div>
         <button class="btn text-white bg-[#0874f2] mt-5 w-full rounded-3xl" id="loginButton">Login</button>
     </form>
