--- a/home.html
+++ b/home.html
@@ -3,9 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payooo Mobile Bank-Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
-<body>
-    
+<body class="bg-[#f4f5f7]">
+    <div class="max-w-lg mx-auto bg-white rounded-b-xl">
+      <div
+        class="min-h-[50px] flex justify-between items-center border-b-2 border-gray-200 p-3"
+      >
+        <div class="flex">
+          <img src="./assets/Group.png" class="h-[50px]" alt="" />
+          <div class="ml-3">
+            <h2 class="font-bold">$<span id="available-balance">45000</span></h2>
+            <p class="text-[#08080880]">Available Balance</p>
+          </div>
+        </div>
+        <div>
+          <button class="text-[#08080880] btn">
+            <i
+              class="fa-solid fa-arrow-right-from-bracket rotate-180 text-gray-700"
+            ></i>
+            Log Out
+          </button>
+        </div>
+      </div>
+
+      <div class="mt-8 p-3">
+        <h1 class="text-2xl font-bold">🔥 Welcome to Payooo!</h1>
+        <p class="text-[#08080880]">
+          Enjoy easy and convenient financial services with us. Cashout charge
+          is low and
+        </p>
+      </div>
+
+      <div class="min-h-[200px] grid grid-cols-3 gap-4 p-3">
+        <div id="add-button" class="border-2 border-gray-300 text-center p-3 rounded-xl">
+          <img src="./assets/wallet1.png" class="mx-auto" alt="" />
+          <h2>Add Money</h2>
+        </div>
+        <div id="cash-out-button" class="border-2 border-gray-300 text-center p-3 rounded-xl">
+          <img src="./assets/send1.png" class="mx-auto" alt="" />
+          <h2>CashOut</h2>
+        </div>
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+          <img src="./assets/money1.png" class="mx-auto" alt="" />
+          <h2>Transfer Money</h2>
+        </div>
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+          <img src="./assets/bonus1.png" class="mx-auto" alt="" />
+          <h2>Get Bonus</h2>
+        </div>
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+          <img src="./assets/purse1.png" class="mx-auto" alt="" />
+          <h2>Pay Bill</h2>
+        </div>
+        <div class="form-btn border-2 border-gray-300 text-center p-3 rounded-xl">
+          <img src="./assets/transaction1.png" class="mx-auto" alt="" />
+          <h2>Transactions</h2>
+        </div>
+      </div>
+    </div>
+
+    <div class="all-form-sections max-w-lg mx-auto">
+        <!-- add money -->
+         <div>
+            <h1 class="my-5 font-bold">Add Money</h1>
+            <form action="" class="bg-white rounded-2xl p-8">
+                <div class="mb-3">
+                    <h1 class="font-semibold">Select A Bank</h1>
+                    <select id="bank" class="select bg-[#f4f5f7] mt-3 rounded-3xl w-full">
+                        <option >Select back</option>
+                        <option>AB bank</option>
+                        <option>IFIC bank</option>
+                        <option>Dutch bangla bank</option>
+                    
+                    </select>
+                </div>
+                <div>
+                    <label class="font-semibold">Bank account Number</label>
+                    <br>
+                   <input id="account-number" type="text" placeholder="Enter 11 digit account number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />    
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold">Amount to Add</label>
+                    <br>
+                   <input id="add-amount" type="text" placeholder="Add Amount to withdraw" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" /> 
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold">Pin Number</label>
+                    <br>
+                   <input id="add-pin" type="text" placeholder="Enter 4 digit pin number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" /> 
+                </div>
+                <button id="add-money-btn" class="btn text-white bg-[#0874f2] mt-5 w-full rounded-3xl">Add money</button>
+            </form>
+         </div>
+
+    </div>
+    <script src="./home.js"></script>
+
 </body>
 </html>
