--- a/home.html
+++ b/home.html
@@ -70,13 +70,13 @@
 
     <div class="all-form-sections max-w-lg mx-auto">
         <!-- add money -->
-         <div>
+         <div id="add-money-parent">
             <h1 class="my-5 font-bold">Add Money</h1>
             <form action="" class="bg-white rounded-2xl p-8">
                 <div class="mb-3">
                     <h1 class="font-semibold">Select A Bank</h1>
                     <select id="bank" class="select bg-[#f4f5f7] mt-3 rounded-3xl w-full">
-                        <option >Select back</option>
+                        <option >Select bank</option>
                         <option>AB bank</option>
                         <option>IFIC bank</option>
                         <option>Dutch bangla bank</option>
@@ -91,7 +91,7 @@
                 <div class="mt-3">
                     <label class="font-semibold">Amount to Add</label>
                     <br>
-                   <input id="add-amount" type="text" placeholder="Add Amount to withdraw" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" /> 
+                   <input id="add-amount" type="text" placeholder="Add Amount to Add" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" /> 
                 </div>
                 <div class="mt-3">
                     <label class="font-semibold">Pin Number</label>
@@ -100,6 +100,30 @@
                 </div>
                 <button id="add-money-btn" class="btn text-white bg-[#0874f2] mt-5 w-full rounded-3xl">Add money</button>
             </form>
+         </div>
+
+         <div id="cash-out-parent" style="display: none;">
+          <h1 class="my-5 font-bold">Cash Out</h1>
+          <form action="" class="bg-white rounded-2xl p-8">
+                <div>
+                    <label class="font-semibold">Agent Number</label>
+                    <br>
+                   <input type="text" placeholder="Enter 11 digit number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />    
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold">Amount</label>
+                    <br>
+                   <input id="withdraw-amount" type="text" placeholder="Enter Amount to withdraw" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" /> 
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold">Pin Number</label>
+                    <br>
+                   <input type="text" placeholder="Enter 4 digit pin number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" /> 
+                </div>
+                <button id="withdraw-btn" class="btn text-white bg-[#0874f2] mt-5 w-full rounded-3xl">Withdraw Money</button>
+            </form>
+
+
          </div>
 
     </div>
